--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "@chakra-ui/react": "^1.6.2",
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
+    "@types/react-lottie": "^1.2.5",
     "framer-motion": "^4.1.17",
     "next": "10.2.2",
+    "prop-types": "^15.7.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-lottie": "^1.2.3"
   },
   "devDependencies": {
     "@types/node": "^15.6.0",
