--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@chakra-ui/react": "^1.6.2",
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
+    "@types/react-icons": "^3.0.0",
     "@types/react-lottie": "^1.2.5",
     "framer-motion": "^4.1.17",
     "next": "10.2.2",
