--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@chakra-ui/react": "^1.6.2",
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
+    "@prismicio/client": "^5.0.0",
     "@types/react-icons": "^3.0.0",
     "@types/react-lottie": "^1.2.5",
     "framer-motion": "^4.1.17",
     "next": "10.2.2",
+    "prismic-dom": "^2.2.5",
     "prop-types": "^15.7.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -23,6 +25,7 @@
   },
   "devDependencies": {
     "@types/node": "^15.6.0",
+    "@types/prismic-dom": "^2.1.1",
     "@types/react": "^17.0.6",
     "typescript": "^4.2.4"
   }
